--- a/.config
+++ b/.config
@@ -51,7 +51,7 @@ CONFIG_PACKAGE_kmod-qca-nss-dp=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-64=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe-64=y
 CONFIG_PACKAGE_kmod-qca-nss-ecm-64=y
-CONFIG_PACKAGE_nss-firmware-ipq8074=y
+# CONFIG_PACKAGE_nss-firmware-ipq8074=y
 
 #删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
