--- a/.config
+++ b/.config
@@ -81,6 +81,7 @@ CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-dnsfilter=y
+CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 # CONFIG_PACKAGE_pptpd=y
 # CONFIG_PACKAGE_xl2tpd=y
 # CONFIG_PACKAGE_tinc=y
