--- a/.config
+++ b/.config
@@ -116,3 +116,9 @@ CONFIG_PACKAGE_luci-app-udpxy=y
 # CONFIG_PACKAGE_luci-app-uugamebooster=y
 
 CONFIG_PACKAGE_luci-app-ssr-plus=y
+
+# CONFIG_PACKAGE_luci-app-speedtest-web=y
+# CONFIG_PACKAGE_luci-app-iperf=y
+# CONFIG_PACKAGE_iperf is not set
+# CONFIG_PACKAGE_iperf3=y
+# CONFIG_PACKAGE_iperf3-ssl is not set
