--- a/.config
+++ b/.config
@@ -116,6 +116,10 @@ CONFIG_PACKAGE_luci-app-udpxy=y
 # CONFIG_PACKAGE_luci-app-uugamebooster=y
 
 CONFIG_PACKAGE_luci-app-ssr-plus=y
+# CONFIG_PACKAGE_luci-app-passwall=y
+# CONFIG_PACKAGE_luci-app-bypass=y
+# CONFIG_PACKAGE_luci-app-vssr=y
+# CONFIG_PACKAGE_luci-i18n-vssr-zh-cn=y
 
 # CONFIG_PACKAGE_luci-app-speedtest-web=y
 # CONFIG_PACKAGE_luci-app-iperf=y
