--- a/.config
+++ b/.config
@@ -34,7 +34,7 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
 
 #语言
-CONFIG_LUCI_LANG_en=y
+# CONFIG_LUCI_LANG_en is not set
 CONFIG_LUCI_LANG_zh_Hans=y
 
 #虚拟内存
@@ -69,6 +69,7 @@ CONFIG_PACKAGE_kmod-qca-nss-dp=y
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 
 #插件
+# CONFIG_PACKAGE_luci-theme-bootstrap is not set
 CONFIG_PACKAGE_luci-theme-argonne=y
 CONFIG_PACKAGE_luci-app-argonne-config=y
 
