--- a/.config
+++ b/.config
@@ -107,7 +107,7 @@ CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-dnsfilter=y
-# CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
+CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 
 CONFIG_PACKAGE_luci-app-iptvhelper=y
 CONFIG_PACKAGE_iptvhelper=y
