--- a/.config
+++ b/.config
@@ -118,8 +118,8 @@ CONFIG_PACKAGE_luci-app-udpxy=y
 # CONFIG_PACKAGE_luci-app-n2n is not set
 # CONFIG_PACKAGE_luci-app-nps
 
-# CONFIG_PACKAGE_pptpd=y
-# CONFIG_PACKAGE_xl2tpd=y
+CONFIG_PACKAGE_ppp-mod-pptp=y
+CONFIG_PACKAGE_xl2tpd=y
 # CONFIG_PACKAGE_tinc=y
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
