--- a/.config
+++ b/.config
@@ -118,11 +118,11 @@ CONFIG_PACKAGE_luci-app-udpxy=y
 # CONFIG_PACKAGE_luci-app-n2n is not set
 # CONFIG_PACKAGE_luci-app-nps
 
-CONFIG_PACKAGE_ppp-mod-pptp=y
-CONFIG_PACKAGE_xl2tpd=y
+# CONFIG_PACKAGE_ppp-mod-pptp=y
+# CONFIG_PACKAGE_xl2tpd=y
 # CONFIG_PACKAGE_tinc=y
-CONFIG_PACKAGE_luci-app-wireguard=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
+# CONFIG_PACKAGE_luci-app-wireguard=y
+# CONFIG_PACKAGE_luci-proto-wireguard=y
 # CONFIG_PACKAGE_luci-app-uugamebooster=y
 
 CONFIG_PACKAGE_luci-app-ssr-plus=y
