--- a/.config
+++ b/.config
@@ -44,9 +44,9 @@ CONFIG_PACKAGE_zram-swap=y
 #ipv6
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_6rd=y
-CONFIG_PACKAGE_6to4=y
+# CONFIG_PACKAGE_6in4=y
+# CONFIG_PACKAGE_6rd=y
+# CONFIG_PACKAGE_6to4=y
 
 #NSS加速相关
 CONFIG_PACKAGE_kmod-qca-nss-dp=y
@@ -54,7 +54,7 @@ CONFIG_PACKAGE_kmod-qca-nss-drv-64=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr-64=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe-64=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr-64=y
-# CONFIG_PACKAGE_kmod-qca-nss-ecm-64 is not set
+CONFIG_PACKAGE_kmod-qca-nss-ecm-64=y
 
 #删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
