--- a/.config
+++ b/.config
@@ -84,6 +84,8 @@ CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-wifischedule=y
 
 CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_ddns-scripts-dnspod=y
+CONFIG_PACKAGE_ddns-scripts-aliyun=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-app-pppoe-relay=y
 
@@ -107,7 +109,7 @@ CONFIG_PACKAGE_luci-app-iptvhelper=y
 CONFIG_PACKAGE_iptvhelper=y
 CONFIG_PACKAGE_luci-app-udpxy=y
 
-# CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_luci-app-frps=y
 # CONFIG_PACKAGE_luci-app-n2n is not set
 # CONFIG_PACKAGE_luci-app-nps
