--- a/.config
+++ b/.config
@@ -114,6 +114,7 @@ CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_luci-app-n2n is not set
 # CONFIG_PACKAGE_luci-app-nps
 
+CONFIG_PACKAGE_luci-app-zerotier=y
 # CONFIG_PACKAGE_ppp-mod-pptp=y
 # CONFIG_PACKAGE_xl2tpd=y
 # CONFIG_PACKAGE_tinc=y
