--- a/.config
+++ b/.config
@@ -109,7 +109,7 @@ CONFIG_PACKAGE_luci-app-iptvhelper=y
 CONFIG_PACKAGE_iptvhelper=y
 CONFIG_PACKAGE_luci-app-udpxy=y
 
-CONFIG_PACKAGE_luci-app-frpc=y
+# CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_luci-app-frps=y
 # CONFIG_PACKAGE_luci-app-n2n is not set
 # CONFIG_PACKAGE_luci-app-nps
